Fixed issue of preferences panel being too long after lg breakpoint is hit

--- a/src/pages/Selector.css
+++ b/src/pages/Selector.css
@@ -16,6 +16,12 @@
     overflow: auto;
 }
 
+@media (max-width: 1280px) {
+    #left-box {
+        height: auto;
+    }
+}
+
 /* .autocomplete-form {
     margin: 100px;
 } */
